# AprioritHomeWork5

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
Core/: Core.h
Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
